--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "local-storage-service",
   "version": "1.0.0",
   "description": "localStorage wrapper for CRUD operations",
-  "main": "dist/esm/index.js",
+  "main": "dist/umd/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
