--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "local-storage-service",
+  "name": "@p9m/local-storage-service",
   "version": "1.0.0",
   "description": "localStorage wrapper for CRUD operations",
   "main": "dist/umd/index.js",
